Create a WebUIController for chrome://suggestions

This ensures that the URLDataSource is properly registered at startup.

BUG=597653

Review URL: https://codereview.chromium.org/1887403002

Cr-Commit-Position: refs/heads/master@{#388197}

Former-commit-id: 0c8e07604abddf7f02daee2ad48314e12f2688b2